force-app/main/default/objects/Book__c/fields/About_Author__c.field-meta.xml
<CustomField>
    <fullName>About_Author__c</fullName>
    <label>About Author</label>
    <type>TextArea</type>
</CustomField>