force-app/main/default/objects/Book__c/fields/About_Book__c.field-meta.xml
<CustomField>
    <fullName>About_Book__c</fullName>
    <label>About Book</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>