force-app/main/default/objects/Book__c/fields/Available_in_which_country__c.field-meta.xml
<CustomField>
    <fullName>Available_in_which_country__c</fullName>
    <label>Available in which country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>