force-app/main/default/objects/Book__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <description>book name</description>
    <label>Book Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>