force-app/main/default/objects/Book__c/fields/List_of_Contents__c.field-meta.xml
<CustomField>
    <fullName>List_of_Contents__c</fullName>
    <label>List of Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>