force-app/main/default/objects/Book__c/fields/Technical_Category__c.field-meta.xml
<CustomField>
    <fullName>Technical_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Category</label>
    <type>Checkbox</type>
</CustomField>