force-app/main/default/objects/Book__c/validationRules/AuthorRule.validationRule-meta.xml
<ValidationRule>
    <fullName>AuthorRule</fullName>
    <active>true</active>
    <description>Author name or about author should not be blank</description>
    <errorConditionFormula>OR(ISBLANK( Author_Name__c ) , ISBLANK( About_Author__c ) )</errorConditionFormula>
    <errorMessage>Please fill detail about the Author</errorMessage>
</ValidationRule>