force-app/main/default/objects/Book__c/validationRules/Priceofbookshouldnotbenegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Priceofbookshouldnotbenegative</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Book price should not be negative</errorMessage>
</ValidationRule>