force-app/main/default/objects/Book__c/listViews/Books_having_price_populated.listView-meta.xml
<ListView>
    <fullName>Books_having_price_populated</fullName>
    <columns>NAME</columns>
    <columns>Author_Name__c</columns>
    <columns>Book_Name__c</columns>
    <columns>Discount__c</columns>
    <columns>Final_Price__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Books having price populated</label>
</ListView>